# ppocr

./: CMakeDefinitions.txt  CMakeLists.txt  Jamroot  README.md  box.cpp  box.hpp  coordinate.cpp  coordinate.hpp  cxxflags.jam  data_loader.cpp  data_loader.hpp  datas  definition.cpp  definition.hpp  doc.md  extract_text.cpp  extract_text2.cpp  image.cpp  image.hpp  image_from_file.cpp  image_from_string.hpp  learning  learning.cpp  learning2  learning2.cpp  learning_cyrillic  learning_latin  lines  lines_info  main.cpp  make_box_character.cpp  make_box_character.hpp  old_main.cpp  old_main2.cpp  print_alternation.cpp  projection.cpp  registry.cpp  registry.hpp
docs/: 10x9_Ct.xcf  10x9_Ct_split.xcf  10x9_bt_split.xcf  9x9_bt.xcf  OCR01.tex  chmoll-alternation.xcf  chmoll-orientation.xcf  chmoll.xcf
images/: image_a2.pbm  image_e1.pbm  image_e2.pbm
includes/boost_unit_tests/: boost_unit_tests.hpp
main/: extract_text6.cpp  extract_text8.cpp  learning2.cpp  make_trie_dictionary.cpp  normalize_glyphs.cpp  ocr2_extract_text.cpp  show_glyphs.cpp  show_stats.cpp  write_glyphs.cpp
math/: almost_equal.hpp
ppocr/: baseline_learning.cpp  defined_loader.hpp  extract_text6.cpp  extract_text8.cpp  font2png.cpp  normalize_glyphs.cpp  normalize_learning.cpp  ocr2_extract_text.cpp  show_glyphs.cpp  stat_definitions.cpp  tree.cpp  write_datas.cpp  write_datas2.cpp  write_glyphs.cpp
ppocr/box_char/: box.cpp  make_box_character.cpp  make_box_character.hpp
ppocr/container/: trie.hpp
ppocr/filters/: best_baseline.hpp
ppocr/image/: coordinate.cpp  image_from_file.cpp  image_from_string.cpp  image_from_string.hpp
ppocr/loader2/: glyphs_loader.cpp  glyphs_loader.hpp  image_io.cpp
ppocr/math/: almost_equal.hpp
ppocr/ocr2/: disambiguous_with_dict.hpp  filter_by_lines.cpp  glyphs.cpp  replacement.cpp  word_lines.cpp  word_lines.hpp  words_infos.hpp
ppocr/sassert/: sassert.hpp
ppocr/spell/: dictionary.cpp
ppocr/strategies/: agravity.cpp  dcompass.cpp  dcompass.hpp  density.cpp  dvdirection.cpp  dvgravity2.cpp  gravity2.cpp  hdirection.cpp  hdirection2.hpp  hgravity.hpp  proportionality_zone.cpp  zone.cpp  zone.hpp
ppocr/utils/: enum_io.hpp  image_compare.cpp  image_compare.hpp  read_definitions_file_and_normalize.hpp  reindex.hpp  unique_sort_definition.cpp
resources/: dict_fr.trie  words_lines-cyrillic.txt  words_lines-latin-cyrillic.txt
resources/DejaVuSansCondensed-11/: DejaVuSansCondensed-11-aliasing.pnm
resources/DejaVuSansCondensed-12/: DejaVuSansCondensed-12-aliasing.pnm  DejaVuSansCondensed-12.pnm
resources/DejaVuSansMono-11/: DejaVuSansMono-11-aliasing.pnm
resources/DejaVuSansMono-9/: DejaVuSansMono-9.pnm
resources/DejaVuSerif-10/: DejaVuSerif-10-aliasing.pnm
resources/DejaVuSerif-11/: DejaVuSerif-11.pnm
resources/DejaVuSerif-BoldItalic-11/: DejaVuSerif-BoldItalic-11-aliasing.pnm
resources/DroidSans-11/: DroidSans-11-aliasing.pnm
resources/DroidSansGeorgian-10/: DroidSansGeorgian-10-aliasing.pnm
resources/DroidSansGeorgian-11/: DroidSansGeorgian-11-aliasing.pnm
resources/DroidSansJapanese-11/: DroidSansJapanese-11.pnm
resources/FreeSans-9/: FreeSans-9-aliasing.pnm  FreeSans-9.pnm
resources/KacstPoster-11/: KacstPoster-11-aliasing.pnm
resources/KacstTitleL-12/: KacstTitleL-12-aliasing.pnm
resources/KacstTitleL-9/: KacstTitleL-9-aliasing.pnm
resources/Oxygen-Sans-11/: Oxygen-Sans-11-aliasing.pnm
resources/Padauk-bold-8/: Padauk-bold-8-aliasing.pnm
resources/datas/: cyrillic.txt  latin-cyrillic.txt  latin.txt
resources/gargi-11/: gargi-11-aliasing.pnm
resources/glyphs/: glyphs-cyrillic.txt  normalized-glyphs-cyrillic.txt  normalized-glyphs-latin-cyrillic.txt  normalized-glyphs-latin.txt
resources/noname/: a.txt  z.txt  ù.pbm  ù.txt
resources/utkal-10/: utkal-10-aliasing.pnm
src/: baseline_learning.cpp  box.cpp  defined_loader.hpp  extract_text.cpp  extract_text2.cpp  extract_text3.cpp  extract_text4.cpp  extract_text5.cpp  extract_text6.cpp  font2png.cpp  graphic_datas.cpp  learning.cpp  learning2.cpp  make_box_character.hpp  make_trie_dictionary.cpp  normalize_data.cpp  normalize_learning.cpp  ocr2_extract_text.cpp  registry.cpp  sassert.hpp  show_stats.cpp  stat_definitions.cpp  tree.cpp  write_data.cpp  write_glyphs.cpp
src/box_char/: box.hpp  make_box_character.cpp  make_box_character.hpp
src/container/: trie.hpp
src/factory/: data_loader.cpp  data_loader.hpp  definition.cpp  definition.hpp  registry.cpp  registry.hpp
src/filters/: best_baseline.hpp  line.cpp  line.hpp
src/image/: coordinate.cpp  coordinate.hpp  image.cpp  image.hpp  image_from_file.cpp  image_from_file.hpp  image_from_string.cpp  (+1 more)
strategies/: agravity.cpp  agravity.hpp  alternation.cpp  alternation.hpp  compass.cpp  compass.hpp  dcompass.cpp  dcompass.hpp  direction.cpp  direction.hpp  gravity.cpp  gravity.hpp  gravity2.cpp  gravity2.hpp  proportionality.cpp  proportionality.hpp
tests/: CMakeLists.txt  cyrillic.negate.pnm  image.cpp  make_box_character.cpp  test_best_baseline.cpp  test_image.cpp  test_line.cpp  test_make_box_character.cpp
tests/container/: test_trie.cpp
tests/filters/: test_best_baseline.cpp
tests/images/: computer.pnm  image1.pbm  image2.pnm
tests/loader2/: test_datas_loader.cpp  test_glyphs_loader.cpp  test_loader.cpp
tests/ocr2/: test_compute_image.cpp
tests/spell/: test_dictionary.cpp  test_word_disambiguouser.cpp
tests/strategies/: agravity.cpp  alternation.cpp  dcompass.cpp  direction.cpp  gravity.cpp  gravity2.cpp  hdirection.cpp  hdirection2.cpp  hgravity.cpp  hgravity2.cpp  proportionality.cpp  test_agravity.cpp  test_alternation.cpp  test_alternations.cpp  test_dcompass.cpp  test_direction.cpp  test_dzdensity.cpp  test_gravity.cpp  test_gravity2.cpp  test_hbar.cpp  test_hdirection.cpp  test_hdirection2.cpp  test_hgravity.cpp  test_hgravity2.cpp  test_loop.cpp  test_proportionality.cpp  test_proportionality_zone.cpp  test_zone.cpp
tests/utils/: reindex.cpp  test_disambigus.cpp
utils/: image_compare.cpp  image_compare.hpp  relationship.hpp  unique_sort_definition.cpp  unique_sort_definition.hpp
(+387 files in other folders)
